[gd_scene load_steps=6 format=2]

[ext_resource path="res://char/square_light.png" type="Texture" id=1]
[ext_resource path="res://platform/laser.gd" type="Script" id=2]
[ext_resource path="res://extra/laser closed.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.166655, 2.13369 ), Vector2( 0, 2.134 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5274, 176.992 )

[node name="laser" type="Sprite"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 7.15256e-07, 0 )
scale = Vector2( 0.166655, 2.13369 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/close = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="laserClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
